# ardrone_control

./: .gitignore  README.md  ardrone_control.sublime-project  ardrone_control.sublime-workspace  gitignore
ardrone_control/: CMakeLists.txt  package.xml
ardrone_controller/: CMakeLists.txt  package.xml
ardrone_controller/launch/: ardrone.launch  simulator.launch
ardrone_controller/src/: controller.py
ardrone_controller/test/: test_ardrone_controller.py  test_ardrone_controller.test
ardrone_lib/: CMakeLists.txt  package.xml  setup.py
ardrone_lib/parameters/: global_controller_params.yaml  ideal_sensors.yaml  sensors.yaml  sim_parameters.yaml
ardrone_lib/src/ardrone_lib/: __init__.py  controllers.py  filters.py  joysticks.py  physics.py  quadrotor.py  quaternion.py  sensors.py
ardrone_lib/src/ardrone_lib/test/: test_controllers.py  test_filters.py  test_quadrotor.py  test_quaternion.py  test_sensors.py
ardrone_lib/test/: test_ardrone_lib.py  test_ardrone_lib.test  test_controllers.py  test_filters.py  test_quadrotor.py  test_quaternion.py  test_sensors.py
ardrone_msgs/: CMakeLists.txt  package.xml
ardrone_msgs/msg/: QuadrotorState.msg
ardrone_sensor_fusion/: CMakeLists.txt  package.xml
ardrone_sensor_fusion/src/: sensor_fusion.py
ardrone_sensor_fusion/test/: test_ardrone_sensor_fusion.py  test_ardrone_sensor_fusion.test
ardrone_simulator/: CMakeLists.txt  package.xml
ardrone_simulator/src/: simulator.py
ardrone_simulator/test/: test_ardrone_simulator.py  test_ardrone_simulator.test
ardrone_trajectory_generator/: CMakeLists.txt  package.xml
ardrone_trajectory_generator/launch/: chirp_ardrone.launch  chirp_simulator.launch
ardrone_trajectory_generator/parameters/: chirp.yaml
ardrone_trajectory_generator/src/: chirp.py  keyboard.py  trajectory.py
ardrone_trajectory_generator/test/: test_ardrone_trajectory_generator.py  test_ardrone_trajectory_generator.test
