<?xml version="1.0"?>
<package>
  <name>ardrone_msgs</name>
  <version>1.0.0</version>
  <description>
    The ardrone_msgs package. It contains the msgs used in this package
  </description>
  <maintainer email="sebascuri@gmail.com">sebascuri</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
