<?xml version="1.0"?>
<package>
  <name>ardrone_sensor_fusion</name>
  <version>1.0.0</version>
  <description>
    The ardrone_sensor_fusion package implements sensor fusion algorithm to
    estimate optimally the Ar.Drone state.
    An Extended Kalman filter is implemented for position estimation:
      - Odometry is used to estimate the position
      - GPS measurements are used to correct such estimations
    A Complementary filter is used to estimate orientation:
      - Gyroscope measurements are used to estimate orientation
      - Accelerometer and Magnetometer measurements are used to correct it.
  </description>

  <maintainer email="sebascuri@gmail.com">sebascuri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>ardrone_msgs</build_depend>
  <run_depend>ardrone_msgs</run_depend>

  <export>
  </export>
</package>
