<?xml version="1.0"?>
<package>
  <name>ardrone_trajectory_generator</name>
  <version>1.0.0</version>
  <description>
    The ardrone_trajectory_generator package commands the reference set point of the ar drone.
    It allows the system to work in open loop (commanding velocity) or closed loop (commanding position).
    Way Points or a Trajectory function can be used to command the drone.
  </description>

  <maintainer email="sebascuri@gmail.com">sebascuri</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>ardrone_msgs</build_depend>
  <run_depend>ardrone_msgs</run_depend>
  <export>
  </export>
</package>
